--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
       <div class="desc">Runge–Kutta solver for planetary interiors emphasizing physical accuracy and numerical stability.</div>
     </div>
     <div class="item">
-      <div class="title"><a href="https://github.com/aoifeturner/Trading_Strat_ML" target="_blank">ML Trading Strategy Simulator</a></div>
-      <div class="desc">Tests ML-driven trading signals against classic baselines with full backtesting and evaluation tools.</div>
+      <div class="title"><a href="https://github.com/aoifeturner/Trading_Strat_ML" target="_blank">ML Trading Strategy Simulator (Next Project, WIP)</a></div>
+      <div class="desc">Current Project. Eventualy Goal: ML-driven trading signals against classic baselines with full backtesting and evaluation tools.</div>
     </div>
     <div class="item">
       <div class="title"><a href="https://github.com/aoifeturner/onda_reddit_scrape" target="_blank">Onda Reddit Scraper</a></div>
