--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </div>
     <div class="item">
       <div class="title"><a href="https://github.com/aoifeturner/Trading_Strat_ML" target="_blank">ML Trading Strategy Simulator (Next Project, WIP)</a></div>
-      <div class="desc">Current Project. Eventualy Goal: ML-driven trading signals against classic baselines with full backtesting and evaluation tools.</div>
+      <div class="desc">Current Project. Eventual Goal: ML-driven trading signals against classic baselines with full backtesting and evaluation tools.</div>
     </div>
     <div class="item">
       <div class="title"><a href="https://github.com/aoifeturner/onda_reddit_scrape" target="_blank">Onda Reddit Scraper</a></div>
