Update on about

--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
 
   <main>
     <h1>Aoife Turner</h1>
-    <p class="subtitle">Computer Science @ Columbia University · AI + Product · D1 Soccer</p>
+    <p class="subtitle">Computer Science @ Columbia Engineering · AI + Product + Finance Interest · D1 Soccer</p>
 
     <h2 id="about">About</h2>
-    <p>I enjoy combining computer science, product thinking, and scientific computing. I like solving hard problems, simplifying them, and turning them into something people actually use.</p>
+    <p>I enjoy pushing myself to be the best in everything that I do.</p>
 
     <h2 id="experience">Experience</h2>
     <div class="item">
