--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </div>
 
     <h2 id="education">Education</h2>
-    <p><strong>Columbia Engineering</strong> — B.S. Computer Science (GPA 3.87, Class of 2028)</p>
+    <p><strong>Columbia Engineering</strong> — B.S. Computer Science, Minor in Economics (GPA 3.87, Class of 2028)</p>
 
     <h2 id="contact">Contact</h2>
     <p>Email: aoifewturner [at] gmail [dot] com</p>
